@@ -2,6 +2,8 @@
 
         Fix for multiple random terms -- restructuring of Z was wrong
 
+	Allow for removal of missing data
+
 0.3	Make a start on replicate-weights variances.
 
 0.2   	Allow multiple random terms to get independent random effects
